update: modal 영역 추가

--- a/src/utils/i18n/locales/ko.json
+++ b/src/utils/i18n/locales/ko.json
@@ -1,288 +1,20 @@
 {
-  "user_id": "이메일",
-  "lang": {
-    "eng": "English",
-    "kor": "한국어"
-  },
-  "login_page": {
-    "id": "이메일",
-    "password": "비밀번호",
-    "login": "로그인",
-    "login_failed": "로그인에 실패하였습니다. 이메일과 비밀번호를 확인해주세요.",
-    "enter_id": "이메일을 입력해주세요.",
-    "enter_password": "비밀번호를 입력해주세요.",
-    "only_worker": "작업자만 로그인이 가능합니다."
-  },
   "menu": {
-    "home": "홈",
-    "search": "검색",
-    "work_orders": "작업 요청",
-    "work_completions": "작업 완료",
-    "team_changes": "작업팀 변경 현황",
-    "my_profile": "내 정보",
-    "logout": "로그아웃",
-    "work_order_details": "작업 요청 상세",
-    "cancel_work": "작업 취소",
-    "work_canceled_details": "작업 취소 상세",
-    "request_change": "작업팀 변경 요청",
-    "enter_work_details": "작업 내역 입력",
-    "work_completed_details": "작업 완료 상세",
-    "change_details": "작업팀 변경 상세",
-    "alarm": "알림"
+    "roadMonitor": "Road Monitor",
+    "monitoring": "도로 모니터링",
+    "coverage": "운행 커버리지",
+    "rapidPci": "Rapid-PCI",
+    "rpcianalysis": "rPCI 분석 결과",
+    "rpcimap": "rPCI 분석 지도",
+    "rpcireport": "rPCI 리포트",
+    "settings": "Settings",
+    "envSetting": "환경 설정"
   },
-  "dashboard": {
-    "todays_work_status": "금일 작업 현황",
-    "work_order": "작업 요청",
-    "work_completed": "작업 완료"
+  "lang": {
+    "ko": "한국어",
+    "en": "영어"
   },
-  "search_page": {
-    "search_parameters": "검색 조건",
-    "hazard_id": "위험물 ID",
-    "road_name": "도로명",
-    "search_by_hazard_id": "위험물 ID로 검색",
-    "search_by_road_name": "도로명으로 검색",
-    "search_explain": "최근 한 달 이내 데이터만 검색됩니다.",
-    "enter_numbers": "숫자만 입력해주세요.",
-    "no_work_exist": "해당하는 작업이 없습니다."
-  },
-  "hazardTypes": {
-    "0": "포트홀",
-    "1": "피로균열",
-    "2": "수직균열",
-    "3": "수평균열",
-    "4": "임시수리",
-    "5": "낙하물",
-    "6": "현수막",
-    "7": "노면표시",
-    "8": "시선유도봉",
-    "9": "맨홀",
-    "10": "기타",
-    "11": "공사현장",
-    "12": "보행자",
-    "13": "교통사고"
-  },
-  "hazardShort": {
-    "0": "포트홀",
-    "1": "피로균열",
-    "2": "수직균열",
-    "3": "수평균열",
-    "4": "임시수리",
-    "5": "낙하물",
-    "6": "현수막",
-    "7": "노면표시",
-    "8": "시선유도봉",
-    "9": "맨홀",
-    "10": "기타",
-    "11": "공사현장",
-    "12": "보행자",
-    "13": "교통사고"
-  },
-  "pass_change": "비밀번호 변경",
-  "descript_pass": "변경할 비밀번호를 입력해주세요.",
-  "help_pass": "비밀번호를 잊으셨나요?",
-  "help_des01": "비밀번호를 잊으셨다면 로그인 화면 하단의 전화번호로 문의해주세요.",
-  "help_des02": "등록된 이메일로 임시 비밀번호를 발급해드리겠습니다.",
-  "pass_fail_five01": "비밀번호 입력 실패 5회 초과로 접근이 차단되었습니다.",
-  "pass_fail_five02": "로그인 화면 하단의 전화번호로 문의해주시면",
-  "pass_fail_five03": "등록된 이메일로 임시 비밀번호를 발급해드리겠습니다.",
-  "temp_pass_info01": "발급받으신 비밀번호는 임시 비밀번호입니다.",
-  "temp_pass_info02": "보안을 위해 새 비밀번호로 재설정해 주세요.",
-  "over_pass_alert01": "비밀번호 변경 후 6개월이 지나 접근이 불가합니다.",
-  "over_pass_alert02": "로그인 화면 하단의 전화번호로 문의해주시면",
-  "over_pass_alert03": "등록된 이메일로 임시 비밀번호를 발급해드리겠습니다.",
-  "dupli_login_s01": "현재 다른 기기에서 계정이 사용 중입니다.",
-  "dupli_login_s02": "이 기기에서 계속 사용하시려면 기존 기기에서 로그아웃 해주세요.",
-  "dupli_login_f01": "다른 기기에서 동일한 계정으로 로그인 시도가",
-  "dupli_login_f02": "반복적으로 실패하여 계정이 잠겼습니다.",
-  "dupli_login_f03": "로그인 화면 하단의 전화번호로 문의해주시면",
-  "dupli_login_f04": "등록된 이메일로 임시 비밀번호를 발급받아 다시 로그인하실 수 있습니다.",
-  "view_map_datiles": "지도 상세보기",
-  "total": "총",
-  "item": "건",
-  "more": "더보기",
-  "map": "지도",
-  "photo": "사진",
-  "direction": "방향",
-  "size": "크기",
-  "location": "위치",
-  "address": "주소",
-  "hazard_coordinates": "좌표",
-  "road_name": "도로명",
-  "hazard_id": "위험물 ID",
-  "ordered_at": "작업 요청일시",
-  "cancel_work": "작업 취소",
-  "enter_work": "작업 입력",
-  "request_change": "작업팀 변경 요청",
-  "grade": "{grade}등급",
-  "grade_title": "등급",
-  "cancel": "취소",
-  "submit": "전송",
-  "work_order_details": "작업 요청 내역",
-  "work_canceled_details": "작업 취소 내역",
-  "completed_at": "작업 완료일시",
-  "cancel_work_page": {
-    "title": "작업 취소",
-    "reason_for_cacellation": "취소 사유",
-    "not_found": "미발견/부재",
-    "duplicate": "중복",
-    "already_repaired": "기수리",
-    "other": "기타",
-    "notes": "비고",
-    "cancel_completion": "작업을 취소하였습니다.",
-    "cancel_failed": "작업 취소를 실패하였습니다.",
-    "please_select": "취소 사유를 선택해주세요."
-  },
-  "add_photo": "사진 추가",
-  "change_photo": "사진 변경",
-  "select_file": "파일 선택",
-  "take_photo": "사진 촬영",
-  "view_photo": "사진 보기",
-  "delete_photo": "사진 삭제",
-  "enter_work_page": {
-    "title": "작업 내역 입력",
-    "road_info": "도로 정보",
-    "type": "유형",
-    "general_road": "일반도로",
-    "highway": "고속도로",
-    "general_lane": "일반차로",
-    "side_road": "이면도로",
-    "bus_lane": "버스전용차로",
-    "bus_stop": "버스정류장",
-    "overpass": "고가차도",
-    "underpass": "지하차도",
-    "intersection": "교차로",
-    "bridge": "교량",
-    "tunnel": "터널",
-    "other": "기타",
-    "lane": "차로",
-    "lane_1st": "1차로",
-    "lane_2nd": "2차로",
-    "lane_3rd": "3차로",
-    "lane_4th": "4차로 이상",
-    "not_applicable": "해당 없음",
-    "please_select_lane": "위험물이 발생한 차로를 선택해주세요(왕복차선 아님)",
-    "repair_info": "보수 정보",
-    "damage_type": "파손 유형",
-    "repair_type": "보수 유형",
-    "complete_repair": "완전 보수",
-    "emergency_repair": "응급 보수",
-    "repair_scale": "보수 면적",
-    "width": "가로",
-    "length": "세로",
-    "area": "면적",
-    "depth": "깊이",
-    "notes": "비고",
-    "enter_photo": "보수 사진",
-    "before_work": "작업 전",
-    "after_work": "작업 후",
-    "worker_info": "작업팀 정보",
-    "pic": "담당자",
-    "position": "직책",
-    "contact": "연락처",
-    "complete_work": "작업을 완료하였습니다.",
-    "failed_work": "작업 내역이 저장되지 않았습니다.",
-    "select_road_type": "도로 유형을 선택해주세요.",
-    "select_road_type_2nd": "하위 도로 유형을 선택해주세요.",
-    "select_lane": "차로를 선택해주세요.",
-    "add_before_photo": "작업 전 사진을 추가해주세요.",
-    "add_after_photo": "작업 후 사진을 추가해주세요.",
-    "select_damage_type": "파손 유형을 선택해주세요.",
-    "select_repair_type": "보수 유형을 선택해주세요.",
-    "select_repair_scale": "보수 면적을 입력해주세요."
-  },
-  "complete": "작업 완료",
-  "save_changes": "수정 완료",
-  "work_complete": "작업 완료",
-  "work_canceled": "작업 취소",
-  "all": "전체",
-  "change_toggle": {
-    "request": "변경 요청",
-    "approval": "변경 승인",
-    "reject": "변경 반려",
-    "cancel": "변경 철회"
-  },
-  "sort": "정렬",
-  "date_desc": "일시 내림차순",
-  "date_asc": "일시 오름차순",
-  "apply": "적용",
-  "copy": {
-    "address": "주소를 복사하였습니다.",
-    "road_name": "도로명을 복사하였습니다.",
-    "coordinates": "좌표를 복사하였습니다."
-  },
-  "attatched_photo": "첨부 사진",
-  "canceled_at": "작업 취소 일시",
-  "change_request_result": "변경 요청 결과",
-  "status": "상태",
-  "updated_at": "처리일시",
-  "change_request_history": "변경 요청 내역",
-  "btn_detail": "작업 요청 내역",
-  "reason": "요청 사유",
-  "requested_at": "요청일시",
-  "withdraw_request": "요청 철회",
-  "change": "변경",
-  "change_status": {
-    "approval": "승인",
-    "reject": "반려",
-    "cancel": "철회"
-  },
-  "change_team": "변경팀",
-  "reject_reason": "사유",
-  "change_withdraw_question": "작업팀 변경 요청을 철회하시겠습니까?",
-  "change_complete": "작업팀 변경 요청을 완료하였습니다.",
-  "change_failed": "작업팀 변경 요청을 실패하였습니다.",
-  "change_withdraw": "작업팀 변경 요청을 철회하였습니다.",
-  "please_reason": "요청 사유를 선택해주세요.",
-  "hazard_filter": "위험물 필터",
-  "select_all": "전체 선택",
-  "deselect_all": "전체 해제",
-  "gradeTypes": {
-    "1": "1등급",
-    "2": "2등급",
-    "3": "3등급",
-    "4": "4등급",
-    "5": "5등급"
-  },
-  "not_jurisdiction": "담당 지역이 아님",
-  "not_hazard": "담당 위험물이 아님",
-  "password": "비밀번호",
-  "confirm_password": "비밀번호 확인",
-  "not_match": "비밀번호와 비밀번호 확인 값이 일치하지 않습니다.",
-  "is_blank": "비밀번호를 변경하지 않으려면 입력란을 비워두세요.",
-  "update_info": "저장",
-  "update_complete": "내 정보 수정을 완료하였습니다.",
-  "update_failed": "내 정보 수정을 실패하였습니다.",
-  "name": "이름",
-  "department_name": "소속 그룹",
-  "logout_message": "로그아웃 했습니다.",
-  "today": "오늘",
-  "yesterday": "어제",
-  "this_month": "이번 달",
-  "last_month": "지난 달",
-  "this_year": "올해",
-  "last_year": "작년",
-  "recent_7_days": "최근 7일",
-  "recent_30_days": "최근 30일",
-  "recent_3_months": "최근 3개월",
-  "recent_year": "최근 1년",
-  "invalid_access": "잘못된 접근입니다.",
-  "update_datetime": "처리 일시",
-  "request_datetime": "요청일시",
-  "hazard_date": "탐지일시",
-  "work_status": {
-    "total": "탐지 접수",
-    "service_request": "작업 요청",
-    "cancel": "작업 취소",
-    "hold": "작업 보류",
-    "complete": "작업 완료",
-    "reject": "작업 취소",
-    "reaasigned": "담당 변경",
-    "request": "변경 요청",
-    "re_approved": "변경 승인",
-    "re_reject": "변경 반려",
-    "withdraw": "변경 철회"
-  },
-  "-": "-",
-  "work_btn_completed": "작업 완료",
-  "work_btn_canceled": "작업 취소"
+  "Language": "언어 설정",
+  "Theme": "테마 설정",
+  "logout": "로그아웃"
 }
