--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -16,5 +16,15 @@
   },
   "Language": "Language",
   "Theme": "Theme",
-  "logout": "logout"
+  "logout": "logout",
+  "button": {
+    "next": "Next",
+    "prev": "Prev",
+    "cancel": "Cancel",
+    "confirm": "Confirm"
+  },
+  "Roadsegment": "Road Segment",
+  "Roadname": "Road name",
+  "Coordinates": "Coordinates",
+  "Capture_at": "Captured at"
 }
