--- a/src/utils/i18n/locales/ko.json
+++ b/src/utils/i18n/locales/ko.json
@@ -16,5 +16,15 @@
   },
   "Language": "언어 설정",
   "Theme": "테마 설정",
-  "logout": "로그아웃"
+  "logout": "로그아웃",
+  "button": {
+    "next": "다음",
+    "prev": "이전",
+    "cancel": "취소",
+    "confirm": "확인"
+  },
+  "Roadsegment": "노드링크",
+  "Roadname": "도로명",
+  "Coordinates": "좌표",
+  "Capture_at": "촬영일시"
 }
