update: 체크박스 구현 및 전송화면 추가

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -21,10 +21,13 @@
     "next": "Next",
     "prev": "Prev",
     "cancel": "Cancel",
-    "confirm": "Confirm"
+    "confirm": "Confirm",
+    "more": "More",
+    "request": "Request"
   },
   "Roadsegment": "Road Segment",
   "Roadname": "Road name",
   "Coordinates": "Coordinates",
-  "Capture_at": "Captured at"
+  "Capture_at": "Captured at",
+  "Roadhistory": "Road History"
 }
