update: rPCI 요청 팝업 완료

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -23,7 +23,8 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "more": "More",
-    "request": "Request"
+    "request": "Request",
+    "allSelect": "Select All / Deselect All"
   },
   "Roadsegment": "Road Segment",
   "Roadname": "Road name",
