update: rPCI history section

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -30,5 +30,9 @@
   "Roadname": "Road name",
   "Coordinates": "Coordinates",
   "Capture_at": "Captured at",
-  "Roadhistory": "Road History"
+  "Roadhistory": "Road History",
+  "RPciHistory": "rPCI History",
+  "hazard": {
+    "pothole": "Potholes"
+  }
 }
