update: r-PCI Legend 완료

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -25,7 +25,8 @@
     "more": "More",
     "request": "Request",
     "allSelect": "Select All / Deselect All",
-    "collapse": "Collapse"
+    "collapse": "Collapse",
+    "grade": "Grade"
   },
   "Roadsegment": "Road Segment",
   "Roadname": "Road name",
