--- a/src/utils/i18n/locales/ko.json
+++ b/src/utils/i18n/locales/ko.json
@@ -26,17 +26,24 @@
     "request": "분석 요청",
     "allSelect": "전체 선택/해제",
     "collapse": "접기",
-    "grade": "등급"
+    "grade": "등급",
+    "map": "지도 보기",
+    "detail": "상세보기",
+    "coverage": "커버리지",
+    "reportSave": "리포트 저장"
   },
   "Roadsegment": "노드링크",
   "Roadname": "도로명",
   "Coordinates": "좌표",
   "Capture_at": "촬영일시",
+  "Analysis_at": "분석일시",
   "Roadhistory": "도로 히스토리",
   "RPciHistory": "rPCI 히스토리",
+  "Hazard_type": "파손유형",
   "hazard": {
     "pothole": "포트홀"
   },
+  "score": "점수",
   "rpciResult": "rPCI 분석 결과",
   "deviceList": "단말기 목록",
   "all": "전체",
