update: 수정 작업 (1)
- 불필요 선언 파일 삭제
- 스타일 변경
- 로직 수정

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -1,14 +1,14 @@
 {
   "menu": {
     "roadMonitor": "Road Monitor",
-    "monitoring": "Road Monitoring",
-    "coverage": "Drive Coverage",
+    "monitoring": "Monitoring",
+    "coverage": "Coverage",
     "rapidPci": "Rapid-PCI",
-    "rpcianalysis": "rPCI Analysis Results",
+    "rpcianalysis": "rPCI Score",
     "rpcimap": "rPCI Map",
     "rpcireport": "rPCI Report",
     "settings": "Settings",
-    "envSetting": "Environment Settings"
+    "envSetting": "Preferences"
   },
   "lang": {
     "ko": "Korean",
