update: 날짜 기본값 설정 (한달)

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -29,7 +29,8 @@
     "grade": "Grade",
     "map": "Map View",
     "detail": "Details",
-    "reportSave": "Save Report"
+    "reportSave": "Save Report",
+    "save": "Save"
   },
   "Roadsegment": "Road Segment",
   "Roadname": "Road name",
