update: 다국어 수정

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -47,5 +47,6 @@
   "rpciResult": "rPCI Analysis Summary",
   "deviceList": "Device List",
   "all": "All Devices",
-  "modelname": "Model"
+  "modelname": "Model",
+  "select_episode": "Select an episode"
 }
