update: init_map script 분리

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -2,7 +2,7 @@
   "menu": {
     "roadMonitor": "Road Monitor",
     "monitoring": "Monitoring",
-    "surroundings": "surroundings Monitoring",
+    "surroundings": "Surroundings",
     "coverage": "Coverage",
     "rapidPci": "Rapid-PCI",
     "rpcianalysis": "rPCI Score",
