--- a/src/utils/i18n/locales/ko.json
+++ b/src/utils/i18n/locales/ko.json
@@ -9,7 +9,8 @@
     "rpcimap": "rPCI 분석 지도",
     "rpcireport": "rPCI 리포트",
     "settings": "Settings",
-    "envSetting": "환경 설정"
+    "envSetting": "환경 설정",
+    "damageTypeCounts": "파손 유형별 개수"
   },
   "lang": {
     "ko": "한국어",
@@ -36,6 +37,10 @@
   },
   "Roadsegment": "노드링크",
   "Roadname": "도로명",
+  "Coverage": "커버리지",
+  "Grade": "등급",
+  "Nodelink": "노드링크",
+  "DamageType": "파손 유형",
   "Coordinates": "좌표",
   "Capture_at": "촬영일자",
   "Analysis_at": "분석일자",
@@ -50,5 +55,11 @@
   "deviceList": "단말기 목록",
   "all": "전체",
   "modelname": "모델명",
-  "select_episode": "회차 선택"
+  "select_episode": "회차 선택",
+  "removeDuplicateCaptures": "중복 촬영 데이터 제거",
+  "duplicateCapturesDescription": "같은 날 동일한 지점을 촬영한 경우, 그 중 최신 데이터만 보관합니다.",
+  "configureRpciGrades": "rPCI 등급 설정",
+  "rpciGradesDescription": "rPCI 분석에 사용할 등급/점수를 아래에서 원하는 대로 설정할 수 있습니다.",
+  "updatedGradingSystemNotice": "변경된 등급 체계는 이후 분석부터 적용됩니다.",
+  "tierGradingSystem": "등급 체계"
 }
