update: 다국어 추가

--- a/src/utils/i18n/locales/en.json
+++ b/src/utils/i18n/locales/en.json
@@ -33,7 +33,9 @@
     "detail": "Details",
     "reportSave": "Save Report",
     "save": "Save",
-    "coverage": "Coverage"
+    "coverage": "Coverage",
+    "roadview": "Road View",
+    "birdview": "Bird View"
   },
   "Roadsegment": "Road Segment",
   "Roadname": "Road name",
