--- a/src/utils/i18n/locales/ko.json
+++ b/src/utils/i18n/locales/ko.json
@@ -33,7 +33,9 @@
     "detail": "상세보기",
     "coverage": "커버리지",
     "reportSave": "리포트 저장",
-    "save": "저장"
+    "save": "저장",
+    "roadview": "로드뷰",
+    "birdview": "버드뷰"
   },
   "Roadsegment": "노드링크",
   "Roadname": "도로명",
