--- a/src/utils/i18n/locales/ko.json
+++ b/src/utils/i18n/locales/ko.json
@@ -63,5 +63,27 @@
   "configureRpciGrades": "rPCI 등급 설정",
   "rpciGradesDescription": "rPCI 분석에 사용할 등급/점수를 아래에서 원하는 대로 설정할 수 있습니다.",
   "updatedGradingSystemNotice": "변경된 등급 체계는 이후 분석부터 적용됩니다.",
-  "tierGradingSystem": "등급 체계"
+  "tierGradingSystem": "등급 체계",
+  "rpci_analyze": {
+    "step01": "현재 화면에서 조회 중인 기간에 대해",
+    "step02": "rPCI분석을 진행합니다. 계속하시겠습니까?",
+    "step03": "분석 기간을 변경하려면 [취소]를 눌러 이전 화면으로 돌아가",
+    "step04": "지도 조회 기간을 수정해 주세요.",
+    "step05": "새롭게 생성될 회차의 이름을 입력해주세요.",
+    "step06": "rPCI를 분석할 도로를 선택해주세요.",
+    "popup01": "요청 확인",
+    "popup01_content": "rPCI 분석이 시작되었습니다. 진행 상황은 [Rapid-PCI] 메뉴에서 확인하실 수 있습니다.",
+    "popup02": "분석 시작 취소",
+    "popup02_content": "rPCI 분석을 진행하지 않으시겠습니까? 이 작업은 되돌릴 수 없습니다.",
+    "popup03_title": "분석 회차명 변경",
+    "popup03_content": "rPCI 분석 회차명을 변경하시겠습니까?",
+    "popup04_title": "분석 회차명 변경 취소",
+    "popup04_content": "rPCI 분석 회차명 변경을 취소하시겠습니까?",
+    "popup05_title": "분석 회차명 확정",
+    "popup05_content": "rPCI 분석 회차명을 입력하신 내용으로로 변경하시겠습니까?",
+    "popup06_title": "PDF 파일 저장",
+    "popup06_content": "현재 조회 중인 회차의 리포트를 PDF파일로 저장하시겠습니까?",
+    "popup07_title": "설정 저장",
+    "popup07_content": "현재 설정을 저장하시겠습니까?"
+  }
 }
